TINY-10741: Prevent view title wrapping when overflowing

--- a/modules/oxide/src/less/theme/components/view/view.less
+++ b/modules/oxide/src/less/theme/components/view/view.less
@@ -36,6 +36,7 @@
     line-height: @button-line-height;
     padding: @button-padding-y @button-padding-x;
     text-align: @button-text-align;
+    white-space: nowrap;
   }
 
   .tox-view__label--normal {
